Create nav section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Creative design</title>
 </head>
 <body>
+    <nav>
+        <div class="wrapper">
+            <button class="burger-icon"><i class="fa-solid fa-bars"></i></button>
+            <div class="nav-items">
+                <a href="#">home</a>
+                <a href="#about-us">about us</a>
+                <a href="#products">products</a>
+                <a href="#contact">contact</a>
+            </div>
+        </div>
+    </nav>
     
 </body>
 </html>
