Create header section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
             </div>
         </div>
     </nav>
+
+    <header class="header">
+        <div class="hero-bg"></div>
+        <div class="hero-text">
+            <h1>creative<span>design</span></h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+    </header>
     
 </body>
 </html>
