Create main section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,64 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
     </header>
+
+    <main>
+        <section class="about-us wrapper" id="about-us">
+            <h2 class="section-title">about us</h2>
+            <p class="about-us-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi totam aliquam modi
+                officia, facere delectus quo nulla placeat. Incidunt, pariatur corrupti impedit deserunt aliquid id.</p>
+            <p class="about-us-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum maiores blanditiis
+                iusto qui. In rem velit libero corporis fuga veniam.</p>
+        </section>
+
+        <section class="products wrapper" id="products">
+            <h2 class="section-title">products</h2>
+
+            <div class="products-box">
+                <div class="product first-product">
+                    <div class="hero-bg"></div>
+                    <div class="hero-text">
+                        <h3>friendly kids</h3>
+                    </div>
+                </div>
+
+
+                <div class="product second-product">
+                    <div class="hero-bg"></div>
+                    <div class="hero-text">
+                        <h3>day planning</h3>
+                    </div>
+                </div>
+
+
+                <div class="product third-product">
+                    <div class="hero-bg"></div>
+                    <div class="hero-text">
+                        <h3>user friendly</h3>
+                    </div>
+                </div>
+
+
+                <div class="product fourth-product">
+                    <div class="hero-bg"></div>
+                    <div class="hero-text">
+                        <h3>compatible with many devices</h3>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="contact wrapper" id="contact">
+            <h2 class="section-title">contact</h2>
+            <p><i class="fas fa-phone"></i> + 48 000 000 000</p>
+            <p><i class="fas fa-at"></i> mail@mail.pl</p>
+
+            <h3>Address</h3>
+            <p>Brain J. Wacker 1</p>
+            <p>00--000 New York</p>
+        </section>
+
+    </main>
     
 </body>
 </html>
