Create footer section

--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
         </section>
 
     </main>
+
+    <footer>
+        <p>&copy; 2023 Creative Design</p>
+    </footer>
     
 </body>
 </html>
